--- a/css/user-page.css
+++ b/css/user-page.css
@@ -67,7 +67,57 @@ div.li {
 }
 
 #image {
-    background-color: cadetblue ;
+    /* background-color: cadetblue ;background-image: url(""); */
     width: 1180px;
     height: 600px;
+    overflow-y: scroll;
+    }
+.column {
+    position: relative;
+  }
+  
+  .column img {
+    opacity: 0.7;
+    cursor: pointer;
+  }
+  
+  .column img:hover {
+    opacity: 1;
+  }
+  .image1 .column img {
+    margin: 10px;
+  }
+  .column p {
+    position: absolute;
+    left: 220px;
+    bottom: 50px;
+    color: white;
+    font-size: 18px;
+    font-weight: bolder;
+  }
+  /* #expandedImg {
+      
+      animation: fadeIn 5s;
+  } */
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+  
+
+  #image {
+      position: relative;
+  }
+  #expandedImg {
+    width: fit-content;
+    position: absolute;
+    left: 400px;
+    width: 1100px;
+    bottom: 0px;
+
 }
+  
